--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -8,10 +8,10 @@ COPY . /app
 WORKDIR /app
 
 FROM base AS prod-deps
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install --prod --frozen-lockfile
+RUN pnpm install --prod --frozen-lockfile
 
 FROM base AS build
-RUN --mount=type=cache,id=pnpm,target=/pnpm/store pnpm install && pnpm run build
+RUN pnpm install && pnpm run build
 
 # Install Go
 FROM golang:1.24 AS go-base
